add `matplotlib` to requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,10 +16,11 @@ classifiers =
 packages = find:
 setup_requires = setuptools
 python_requires = >=3.6
-install_requires = 
+install_requires =
     numpy
     scipy
     pandas
+    matplotlib
 
 [options.packages.find]
 where = adaptfx
